--- a/swe-orm-restaurants/package.json
+++ b/swe-orm-restaurants/package.json
@@ -1,9 +1,16 @@
 {
   "scripts": {
+    "start": "nodemon",
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
+    "handlebars": "^4.7.6",
     "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
+    "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0"
   }
 }
